# ray-tracer-rust

./: .gitignore  Cargo.toml  README.md
src/: args.rs  camera.rs  canvas.rs  checkerboard.rs  cli.yml  color.rs  geometry.rs  light.rs  main.rs  math.rs  progress_bar.rs  render.rs  scene.rs  scene_generator.rs  shape.rs  sphere.rs
src/geometry/: line3d.rs  mod.rs  utils.rs  vector3d.rs
src/shapes/: checkerboard.rs  material.rs  mod.rs  shape.rs  sphere.rs
