[project]
name = "Ray Tracer"
version = "0.0.1"
authors = ["M. Rozycki <mar.rozycki@gmail.com>"]

[dependencies]
clap = { version = "2.32.0", features = ["yaml"] }
rand = "0.5.4"
itertools = "0.7.8"
uuid = { version = "0.6.5", features = ["v4"] }
rayon = "1.0.2"

[[bin]]
name = "raytracer"
path = "src/main.rs"
